# LoanApprovalPrediction

./: .gitignore  README.md  pyproject.toml
data/: ax_client.json  sample_submission.csv  submission.csv  submission10.csv  submission2.csv  submission4.csv  submission5.csv  submission6.csv  submission7.csv  submission8.csv  submission9.csv  test.csv  train.csv
loanapprovalprediction/: constants.py  hyperparameter_optimization.py  preprocessing.py
notebooks/: eda.ipynb  simple_models.ipynb
