[tool.poetry]
name = "loanapprovalprediction"
version = "0.1.0"
description = ""
authors = ["Ron Budnar <budnarr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<4.0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
polars = "^1.11.0"
duckdb = "^1.1.2"
scikit-learn = "^1.5.2"
pydantic = "^2.9.2"
xgboost = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
kaggle = "^1.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
