[tool.poetry]
name = "loanapprovalprediction"
version = "0.1.0"
description = ""
authors = ["Ron Budnar <budnarr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<4.0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
polars = "^1.11.0"
duckdb = "^1.1.2"
scikit-learn = "^1.5.2"
pydantic = "^2.9.2"
xgboost = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
kaggle = "^1.6.17"
pyarrow = "^17.0.0"
graphviz = "^0.20.3"
cupy-cuda12x = "^13.3.0"
ax-platform = "^0.4.3"
imbalanced-learn = "^0.12.4"
lightgbm = "^4.5.0"
catboost = "^1.2.7"
pandera = "^0.20.4"
tensorboard = "^2.18.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
